firmware/boards/board.h

#ifndef BOARD_H
#define BOARD_H

/*
 * This is my attempt at some kind of board abstraction. The drivers abstract away the peripherals, and this file
 * abstracts away the board.
 * 
 */

#include "drivers/gpio.h"
#include "drivers/uart.h"
#include "drivers/exti.h"
#include "drivers/rcc.h"
#include "drivers/flash.h"
#include "drivers/pwr.h"
#include "drivers/mpcbb.h"
#include "drivers/tzsc.h"
#include "drivers/timer.h"

typedef enum {
    BOARD_LED_GREEN = 0,
    BOARD_LED_BLUE,
    BOARD_LED_RED,
} board_led_t;

typedef enum {
    BOARD_BUTTON_USER = 0,
} board_button_t;

/**
 * @brief Logical button transition to trigger on, independent of each board's active-high/active-low wiring.
 *
 * board_button_init() translates this into the correct physical EXTI edge for the board being built.
 */
typedef enum {
    BUTTON_EDGE_PRESS = 0,
    BUTTON_EDGE_RELEASE,
    BUTTON_EDGE_BOTH,
} button_edge_t;

/**
 * @brief GPIO ports that can be accessed.
 *
 * NOTE: I am not sure how to handle implementing boards that have more or fewer than these..
 * these are the ports available on my boards.
 * 
 */
typedef enum {
    BOARD_GPIO_PORT_A = 0,
    BOARD_GPIO_PORT_B,
    BOARD_GPIO_PORT_C,
    BOARD_GPIO_PORT_D,
    BOARD_GPIO_PORT_E,
    BOARD_GPIO_PORT_F,
    BOARD_GPIO_PORT_G,
    BOARD_GPIO_PORT_H,
} board_gpio_port_t;

#define BOARD_GPIO_BACKEND_SIZE 8
typedef struct {
    /* Do not access this member yourself */
    uint8_t _opaque[BOARD_GPIO_BACKEND_SIZE];
} board_gpio_backend_t;

#define BOARD_EXTI_BACKEND_SIZE 1
typedef struct {
    /* Do not access this member yourself */
    uint8_t _opaque[BOARD_EXTI_BACKEND_SIZE];
} board_exti_backend_t;

/**
 * @brief Create a GPIO device
 * 
 */
void board_gpio_create(gpio_dev_t *dev, board_gpio_port_t port, uint8_t pin, board_gpio_backend_t *backend);

/**
 * @brief Create an EXTI device
 * 
 */
void board_exti_create(exti_dev_t *dev, board_exti_backend_t *backend, uint8_t pin);

/*
 * This init is quite simple. It wires upp the relevant backends for the drivers, but does otherwise not do
 * much configuration. That must be done by the application (for now).
 *
 * UART is wired up correctly, but the application needs to invoke uart_init with a configuration object
 * before the uart can be used.
 */
void board_init(void);

gpio_dev_t   *board_led(board_led_t led);
gpio_dev_t   *board_button(board_button_t btn);
exti_dev_t   *board_button_exti(board_button_t btn);
uart_dev_t   *board_console(void);
tzsc_periph_t board_console_periph(void);
rcc_dev_t    *board_rcc(void);
flash_dev_t  *board_flash(void);
pwr_dev_t    *board_pwr(void);
tzsc_dev_t   *board_tzsc(void);
timer_dev_t  *board_timer(void);

void board_button_init(gpio_dev_t *button, gpio_security_t security, button_edge_t edge, void (*button_callback)(button_edge_t edge));

/* Configure PLL for this board's rated clock. Call after board_init(). */
void board_configure_pll(void);

/* Returns the SYSCLK frequency in Hz after board_configure_pll() runs. */
uint32_t board_sysclk_hz(void);

#define BOARD_MPCBB_COUNT 2
#define BOARD_MPCBB1_SUPERBLOCKS 24
#define BOARD_MPCBB2_SUPERBLOCKS 8

mpcbb_dev_t *board_mpcbb(int index);

#endif // BOARD_H